refactor: Update ANTLR grammar for REPL commands